# hpp-intersect

./: .gitignore  CMakeLists.txt  README.md
include/hpp/intersect/: doc.hh.in  fwd.hh  intersect.hh
src/: CMakeLists.txt  intersect.cc
